--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.12",
+    "@chakra-ui/react": "^2.4.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "framer-motion": "^7.6.7",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
