--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "framer-motion": "^7.6.12",
+    "mongodb": "^4.12.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
