--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^4.12.1",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
