--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^4.12.1",
     "mongoose": "^6.9.2",
     "next": "latest",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1"
