--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
