--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "mongoose": "^6.9.2",
     "next": "latest",
     "next-auth": "^4.20.1",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
+    "zod": "^3.21.4",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
