--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.10.5",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^7.6.12",
+    "ioredis": "^5.3.1",
     "mongodb": "^4.12.1",
     "mongoose": "^6.9.2",
     "next": "latest",
