--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^7.6.12",
     "ioredis": "^5.3.1",
@@ -20,6 +21,7 @@
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "zod": "^3.21.4",
