--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.4.1",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.4",
     "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^7.6.12",
